Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,3 +2,11 @@
 	inheritFrom = All-Projects
 [submit]
 	action = rebase if necessary
+[access "refs/heads/*"]
+	create = group Redmi 2 (wingtech)
+	forgeAuthor = group Redmi 2 (wingtech)
+	forgeCommitter = group Redmi 2 (wingtech)
+	push = +force group Redmi 2 (wingtech)
+	label-Code-Review = -2..+2 group Redmi 2 (wingtech)
+	label-Verified = -1..+1 group Redmi 2 (wingtech)
+	submit = group Redmi 2 (wingtech)
