wt88047: update defconfig

--- a/arch/arm/configs/cyanogenmod_wt88047_defconfig
+++ b/arch/arm/configs/cyanogenmod_wt88047_defconfig
@@ -32,16 +32,16 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-blackhawk"
+CONFIG_LOCALVERSION="-bk-Nightmare"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
 CONFIG_HAVE_KERNEL_LZO=y
 CONFIG_HAVE_KERNEL_LZ4=y
-CONFIG_KERNEL_GZIP=y
+# CONFIG_KERNEL_GZIP=y
 # CONFIG_KERNEL_LZMA is not set
-# CONFIG_KERNEL_XZ is not set
+CONFIG_KERNEL_XZ=y
 # CONFIG_KERNEL_LZO is not set
 # CONFIG_KERNEL_LZ4 is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
@@ -2383,6 +2383,7 @@ CONFIG_FB_MSM_MDSS_COMMON=y
 # CONFIG_FB_MSM_MDP31 is not set
 # CONFIG_FB_MSM_MDP40 is not set
 CONFIG_FB_MSM_MDSS=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_FB_MSM_MDP_NONE is not set
 # CONFIG_FB_MSM_MDDI is not set
 # CONFIG_FB_MSM_MIPI_DSI is not set
